--- a/html/css/app.css
+++ b/html/css/app.css
@@ -4,10 +4,37 @@
     font-family: 'Open Sans';
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 #root {
     text-align: center;
-    height: 580px;
-    line-height: 580px;
+    height: 596px;
     font-size: 70px;
-    background-color: chartreuse;
+    position: relative;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.responsive-img {
+    width: auto;
+    height: 80vh;
+}
+
+.responsive-emoji {
+    font-size: 400px;
+    line-height: 400px;
+    margin: 15px;
+}
+
+.responsive-emoji > img {
+    margin: 0 !important;
 }
