Add new robot events to UI

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -26,7 +26,8 @@ html, body {
 
 .responsive-img {
     width: auto;
-    height: 80vh;
+    height: 90%;
+    display: block;
 }
 
 .responsive-emoji {
